--- a/static/pyproject.toml
+++ b/static/pyproject.toml
@@ -7,13 +7,13 @@ name = "pipesec"
 version = "0.1.0"
 description = "PipeSec: hybrid CI/CD workflow security analyzer"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.11"
 dependencies = [
   "pyyaml>=6.0.3",
 ]
 
 [project.scripts]
-pipesec = "static.cli:main"
+pipesec = "pipesec.cli:main"
 
 [dependency-groups]
 dev = [
@@ -21,5 +21,5 @@ dev = [
 ]
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["static*"]
+where = ["src"]
+include = ["static*", "pipesec*"]
